# ai_trading_bot

./: .gitignore  AGENTS.md  PROFESSOR_RUN_GUIDE.md  README.md  backtester.py  check_cuda.py  collect_data.py  config.py  crypto_backtest.py  data_handler.py  evaluate_model.py  finbert_utils.py  gunicorn.conf.py  monitor_app.py  portfolio.py  pyproject.toml  requirements.txt  run_experiments.py  run_oos_experiments.py  start_monitor.cmd  start_monitor.ps1  strategy.py  tradingbot.py  train_model.py  utils.py
.specify/: feature.json
data/: collection_summary.json
data_smoketest/: collection_summary.json
logs/: MLTrader_2024-11-09_12-25_KsIXj8_tearsheet.html  MLTrader_2024-11-09_12-25_KsIXj8_trades.csv  MLTrader_2024-11-09_12-38_78bdVd_settings.json  MLTrader_2024-11-09_12-38_78bdVd_tearsheet.html  MLTrader_2024-11-09_12-38_78bdVd_trades.csv  MLTrader_2024-11-09_12-39_TRdyRl_stats.csv  MLTrader_2024-11-09_12-39_TRdyRl_tearsheet.csv  MLTrader_2024-11-09_12-39_TRdyRl_tearsheet.html  MLTrader_2024-11-09_12-39_TRdyRl_trades.csv  MLTrader_2024-11-09_12-53_OpIbch_tearsheet.html  MLTrader_2024-11-09_12-53_OpIbch_trades.csv  MLTrader_2024-11-09_13-07_YGVanr_settings.json  MLTrader_2024-11-09_13-07_YGVanr_stats.csv  MLTrader_2024-11-09_13-14_0plYJ5_stats.csv  MLTrader_2024-11-09_13-14_0plYJ5_tearsheet.csv  MLTrader_2024-11-09_13-14_0plYJ5_tearsheet.html  MLTrader_2024-11-09_13-14_0plYJ5_trades.csv  MLTrader_2024-11-09_13-42_oswhjo_stats.csv  MLTrader_2024-11-09_13-42_oswhjo_tearsheet.html  MLTrader_2024-11-09_13-42_oswhjo_trades.csv  MLTrader_2024-11-09_13-51_QZrIUe_trades.csv  (+40 more)
(+183 files in other folders)
