[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-trading-bot"
version = "0.1.0"
description = "Modular Lumibot and Alpaca trading bot with paper/live safeguards, backtesting, and monitoring logs."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "lumibot==4.4.61",
    "alpaca-py==0.43.2",
    "pandas==2.3.3",
    "numpy==2.2.6",
    "scipy==1.15.3",
    "yfinance==1.2.1",
    "joblib==1.5.2",
    "python-dotenv==1.2.2",
    "Flask==3.1.3",
    "pystray==0.19.5",
    "Pillow==11.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
]
model = [
    "scikit-learn==1.7.2",
    "xgboost==3.1.2",
]
sentiment = [
    "transformers==4.57.3",
    "torch==2.9.1",
]

[project.scripts]
tradingbot = "tradingbot.app.main:main"
tradingbot-monitor = "tradingbot.app.tray:main"

[tool.setuptools]
packages = ["tradingbot", "tradingbot.app", "tradingbot.config", "tradingbot.data", "tradingbot.execution", "tradingbot.risk", "tradingbot.sentiment", "tradingbot.strategy"]
py-modules = ["utils", "monitor_app"]
